[package]
name = "sexpr_ir"
version = "0.1.0"
authors = ["enter <enterindex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sexpr_ir"
path = "src/lib.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"