[package]
name = "sexpr_ir"
license = "MIT"
version = "0.4.1"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/imlyzh/sexpr_ir"

description = "A Generic S-Expression IR Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sexpr_ir"
path = "src/lib.rs"

[[example]]
name = "parse_sexpr"
path = "examples/parse_sexpr.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
serde = { version = "^1.0.*", features = ["rc", "derive"] }
# serde_json = "^1.0.*"
